--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@
 @tailwind utilities;
 
 .nft-gradient {
-   background: linear-gradient(101.12deg, #EB1484 27.35%, #C91CC3 99.99%, #C81CC5 100%, #C81CC5 100%);
+   background: linear-gradient(101.12deg, #2ab5f0 27.35%, #82d1ff 99.99%, #396fec 100%, #22cdd3 100%);
 }
 
 .white-bg {
@@ -50,12 +50,12 @@
 }
   
 .fa-moon {
-    color: pink;
+    color: rgb(255, 255, 255);
     font-size: 9px;
 }
   
 .fa-sun {
-    color: yellow;
+    color: rgb(255, 255, 255);
     font-size: 9px;
 }
 
